[package]
name = "NCD_smartcontract"
version = "0.1.0"
authors = ["Oscar Calvo Alvarez"]
edition = "2021"

[lib]
create-type = ["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = “4.0.0” 
rand = "0.5.5"
colored = "2.0.0"

[profile.release]
codegen-units = 1
# Tell 'rustc' to optimize for small code size
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operation https://stackoverflow.com/a/64136471/249801
overflow-cheks = true 
